created additional pages + begin editing CSS

--- a/web/src/components/blog-post-preview-list.module.css
+++ b/web/src/components/blog-post-preview-list.module.css
@@ -7,8 +7,9 @@
 
 .headline {
   font-size: var(--font-micro-size);
+  font-family: Source Sans Pro;
   line-height: var(--font-micro-line-height);
-  font-weight: 600;
+  font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 0.5px;
   margin: 2rem 0;
