--- a/web/src/styles/custom-properties.css
+++ b/web/src/styles/custom-properties.css
@@ -4,10 +4,10 @@
   --color-black: #202123;
   --color-dark-gray: #32373e;
   --color-gray: #697a90;
-  --color-light-gray: #b4bcc7;
+  --color-light-gray: #A0A0A0;
   --color-very-light-gray: #e7ebed;
   --color-white: #fff;
-  --color-accent: #156dff;
+  --color-accent: #22AF74;
 
   /* Typography */
   --unit: 16;
