--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -1,7 +1,7 @@
 @import './custom-properties.css';
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 html {
-  font-family: var(--font-family-sans);
   font-size: var(--font-base-size);
   line-height: var(--font-base-line-height);
 }
@@ -11,6 +11,10 @@ body {
   background: var(--color-white);
   color: var(--color-black);
   margin: 0;
+}
+
+h1 {
+  font-family: 'Source Serif Pro', sans-serif;
 }
 
 html,
