--- a/web/src/components/blog-post-preview.module.css
+++ b/web/src/components/blog-post-preview.module.css
@@ -55,6 +55,8 @@
 }
 
 .excerpt {
+  font-family: 'Source Sans Pro';
+  
   @nest & p {
     margin: 0.5em 0;
   }
@@ -68,4 +70,6 @@
   font-size: var(--font-small-size);
   line-height: var(--font-small-line-height);
   color: var(--color-gray);
+  text-transform: uppercase;
+  font-family: 'Source Sans Pro';
 }
