--- a/web/src/components/blog-post-preview-small.module.css
+++ b/web/src/components/blog-post-preview-small.module.css
@@ -69,7 +69,7 @@
 .date {
   font-size: var(--font-small-size);
   line-height: var(--font-small-line-height);
-  color: var(--color-gray);
+  color: var(--color-black);
   text-transform: uppercase;
   font-family: 'Source Sans Pro';
 }
