--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -2,10 +2,17 @@
 @import '../styles/custom-properties.css';
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
-.root {}
+.root {
+
+}
 
 .title {
   composes: responsiveTitle1 from './typography.module.css';
+  padding-bottom: 0rem;
+}
+
+.excerpt {
+  padding-top: 0rem;
 }
 
 .mainImage {
@@ -29,9 +36,8 @@
 .grid {
   @media (--media-min-medium) {
     display: grid;
-    grid-template-columns: 1fr;
     grid-column-gap: 2em;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 1fr;
   }
 }
 
@@ -62,23 +68,25 @@
   }
 }
 
-.metaContent {
+.sideContent {
   float: left;
 }
 
 .publishedAt {
   composes: small from './typography.module.css';
-  margin: 2rem 0 3rem;
+  /* margin: 0rem 0 3rem; */
   color: var(--color-black);
   font-family: 'Source Sans Pro';
   text-transform: uppercase;
   display: inline-block;
+  padding-top: 0rem;
   padding-right: 3rem;
+  padding-bottom: 3rem;
 }
 
 .categories {
   /* border-top: 1px solid var(--color-very-light-gray); */
-  margin: 2rem 0 3rem;
+  /* margin: 0rem 0 3rem; */
   font-family: 'Source Sans Pro';
   text-transform: uppercase;
   color: var(--color-gray);
@@ -92,6 +100,7 @@
   }
 
   @nest & ul li {
+    display: block;
     padding: 0.25rem 0;
   }
 }
