--- a/web/src/components/layout.module.css
+++ b/web/src/components/layout.module.css
@@ -1,9 +1,10 @@
 @import '../styles/custom-media.css';
 @import '../styles/custom-properties.css';
 
+
 .content {
-  background: var(--color-white);
   min-height: calc(100% - 73px - 120px);
+  /* max-width: calc(100% - 900px); */
 
   @media (--media-min-small) {
     min-height: calc(100% - 91px - 155px);
@@ -11,7 +12,8 @@
 }
 
 .footer {
-  border-top: 1px solid var(--color-very-light-gray);
+  /* border-top: 1px solid var(--color-black); */
+  text-transform: uppercase;
 
   @nest & a {
     color: inherit;
@@ -32,7 +34,7 @@
   margin: 0 auto;
 
   @media (--media-min-small) {
-    padding: 6em 2em 2em;
+    padding: 3em 2em 2em;
   }
 }
 
